# claude-count

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
Formula/: claude-count.rb
scripts/: package-macos.sh
src/: auth.rs  diagnose.rs  main.rs  poller.rs  window.rs
src/localization/: english.rs  french.rs  german.rs  japanese.rs  mod.rs  spanish.rs
