[package]
name = "claude-code-usage-monitor"
version = "1.3.2"
edition = "2021"
license = "MIT"
description = "Claude Count for macOS"

[dependencies]
ureq = { version = "2", default-features = false, features = ["native-tls", "json"] }
native-tls = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
tray-icon = "0.21.3"
winit = "0.30.13"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
